[package]
name = "cmn_topology_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "measurement"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark/main.rs"

[dependencies]
log = "0.4.20"
regex = "1.10.2"
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"


# benchmark dependencies
crossbeam-utils = "0.8.16"
core_affinity = "0.8.1"
env_logger = "0.10.1"
chrono = "0.4.31"
